crates/tapir-script/compiler/src/compile/snapshots/compiler__compile__symtab_visitor__test__symtab_fail_snapshot_tests@undefined_symbol_in_function_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/symtab_visitor.rs
expression: error_str
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/symtab_visitor/undefined_symbol_in_function_fail.tapir
---
Error: Unknown variable 'y'
   ╭─[/home/gwilym/Projects/tapir-game-tools/crates/tapir-script/compiler/src/compile/snapshot_tests/symtab_visitor/undefined_symbol_in_function_fail.tapir:1:1]
   │
 2 │     return y;
   │            ┬  
   │            ╰── Unknown variable
───╯
